--- a/Mediatheque/Mediatheque.vcxproj
+++ b/Mediatheque/Mediatheque.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Mediatheque.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Mediatheque.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
