--- a/Mediatheque/Mediatheque.vcxproj.filters
+++ b/Mediatheque/Mediatheque.vcxproj.filters
@@ -26,5 +26,14 @@
     <ClInclude Include="Mediatheque.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Medias.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Client.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Operations.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
