--- a/Mediatheque/Mediatheque.vcxproj
+++ b/Mediatheque/Mediatheque.vcxproj
@@ -131,7 +131,10 @@
     <ClCompile Include="Mediatheque.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h" />
+    <ClInclude Include="Medias.h" />
     <ClInclude Include="Mediatheque.h" />
+    <ClInclude Include="Operations.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
