--- a/Mediatheque/Mediatheque.vcxproj
+++ b/Mediatheque/Mediatheque.vcxproj
@@ -132,6 +132,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h" />
+    <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="InputCommand.h" />
     <ClInclude Include="Medias.h" />
     <ClInclude Include="Mediatheque.h" />
     <ClInclude Include="Operations.h" />
