--- a/Mediatheque/Mediatheque.vcxproj.filters
+++ b/Mediatheque/Mediatheque.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="Operations.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="InputCommand.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Exceptions.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
